--- a/entities/.happy/config.json
+++ b/entities/.happy/config.json
@@ -17,45 +17,56 @@
                 "additional_env_vars": {
                     "AWS_REGION": "us-west-2",
                     "BOTO_ENDPOINT_URL": "http://motoserver.czidnet:4000",
-                    "CERBOS_URL": "http://cerbos:3592",
+                    "CERBOS_URL": "http://localhost:3592",
                     "DEFAULT_UPLOAD_BUCKET": "local-bucket",
                     "DEFAULT_UPLOAD_PROTOCOL": "s3",
                     "JWK_PRIVATE_KEY_FILE": "/czid-platformics/entities/test_infra/fixtures/private_key.pem",
                     "JWK_PUBLIC_KEY_FILE": "/czid-platformics/entities/test_infra/fixtures/public_key.pem",
                     "WORKERS": "2"
                 },
-                "emptydir_volumes": [{
-                    "name": "policies",
-                    "parameters": {
-                        "size_limit": "100Mi"
+                "emptydir_volumes": [
+                    {
+                        "name": "policies",
+                        "parameters": {
+                            "size_limit": "100Mi"
+                        }
                     }
-                }],
+                ],
                 "services": {
                     "entities": {
                         "cpu": "2",
                         "health_check_path": "/graphql",
-                        "memory": "1000Mi",
-                        "service_type": "INTERNAL",
-                        "sidecars":{
-                            "cerbos":
-                                {
-                                    "image": "ghcr.io/cerbos/cerbos",
-                                    "tag": "0.29.0",
-                                    "port": 3592,
-                                    "cpu": "100m",
-                                    "memory": "300Mi",
-                                    "args": ["server", "--config", "/var/policies/cerbos/config/config.yaml"]
-                                }
-                        },
                         "init_containers": {
                             "init": {
+                                "cmd": [
+                                    "cp",
+                                    "-r",
+                                    "/czid-platformics/entities/cerbos/",
+                                    "/var/policies/"
+                                ],
                                 "image": "{entities}",
-                                "tag":  "${var.image_tag}",
-                                "cmd": ["cp", "-r", "/czid-platformics/entities/cerbos/", "/var/policies/"]
+                                "tag": "${var.image_tag}"
+                            }
+                        },
+                        "memory": "1000Mi",
+                        "service_type": "INTERNAL",
+                        "sidecars": {
+                            "cerbos": {
+                                "args": [
+                                    "server",
+                                    "--config",
+                                    "/var/policies/cerbos/config/config.yaml"
+                                ],
+                                "cpu": "100m",
+                                "image": "ghcr.io/cerbos/cerbos",
+                                "memory": "300Mi",
+                                "port": 3592,
+                                "tag": "0.29.0"
                             }
                         }
                     }
                 },
+                "source": "git@github.com:chanzuckerberg/happy//terraform/modules/happy-stack-eks?ref=rlim/ephemeral-volume-support",
                 "tasks": {
                     "migrate": {
                         "cmd": [
@@ -63,7 +74,8 @@
                         ],
                         "cpu": "100m",
                         "image": "{entities}:${var.image_tag}",
-                        "memory": "1000Mi"
+                        "memory": "1000Mi",
+                        "platform_architecture": "arm64"
                     }
                 }
             }
@@ -87,7 +99,8 @@
                         "service_type": "PRIVATE",
                         "success_codes": "200-499"
                     }
-                }
+                },
+                "source": "git@github.com:chanzuckerberg/happy//terraform/modules/happy-stack-eks?ref=main"
             }
         }
     },
@@ -115,7 +128,6 @@
                 "platform_architecture": "arm64",
                 "port": 8008
             }
-        },
-        "source": "git@github.com:chanzuckerberg/happy//terraform/modules/happy-stack-eks?ref=rlim/ephemeral-volume-support"
+        }
     }
 }
