--- a/entities/cerbos/policies/host_organism.yaml
+++ b/entities/cerbos/policies/host_organism.yaml
@@ -6,7 +6,7 @@ resourcePolicy:
   version: "default"
   importDerivedRoles:
     - common_roles
-  resource: "sequence_alignment_index"
+  resource: "host_organism"
   rules:
     - actions: ['view', 'create', 'update']
       effect: EFFECT_ALLOW
