--- a/entities/schema/platformics.yaml
+++ b/entities/schema/platformics.yaml
@@ -174,6 +174,14 @@ classes:
         range: FileUploadClient
       upload_error:
         range: string
+      created_at:
+        range: date
+        required: true
+      updated_at:
+        range: date
+      deleted_at:
+        range: date
+    
 
   # ============================================================================
   # Entities
