--- a/entities/schema/platformics.yaml
+++ b/entities/schema/platformics.yaml
@@ -20,7 +20,7 @@ types:
     base: str
     description: A UUID
 
-  2dArrayInt:
+  Array2dInt:
     uri: xsd:array
     base: int
     description: A 2D array of integers, e.g. [[1, 2, 3], [4, 5, 6]]
@@ -487,7 +487,7 @@ classes:
       coverage_total_length:
         range: int
       coverage_viz:
-        range: 2dArrayInt
+        range: Array2dInt
     annotations:
       plural: MetricsConsensusGenomes
 
